# AOC2023

./: .gitignore  CMakeLists.txt  readme.md
day01cpp/: day1main.cpp
day01rust/: Cargo.toml
day01rust/src/: main.rs
day02cpp/: main.cpp
day03cpp/: main.cpp
day04cpp/: main.cpp
day05cpp/: main.cpp
day06cpp/: main.cpp
day07cpp/: main.cpp
day08cpp/: main.cpp
day09cpp/: main.cpp
day10cpp/: main.cpp
day11cpp/: main.cpp
day13cpp/: main.cpp
day14cpp/: main.cpp
day15cpp/: main.cpp
day16cpp/: main.cpp
