cmake_minimum_required(VERSION 3.8)

project(AOC2023)
set(CMAKE_CXX_STANDARD 17)

add_executable(day01cpp day01cpp/day1main.cpp)
add_executable(day02cpp day02cpp/main.cpp)
add_executable(day03cpp day03cpp/main.cpp)
add_executable(day04cpp day04cpp/main.cpp)
#add_executable(day05 day05/day5main.cpp)
#add_executable(day06 day06/day6main.cpp)
#add_executable(day07 day07/day7main.cpp)
#add_executable(day08 day08/main.cpp)
#add_executable(day09 day09/main.cpp)
#add_executable(day10 day10/main.cpp)
#add_executable(day11 day11/main.cpp)
#add_executable(day12 day12/main.cpp)
#add_executable(day13 day13/main.cpp)
#add_executable(day14 day14/main.cpp)
#add_executable(day15 day15/main.cpp)
#add_executable(day16 day16/main.cpp)
