cmake_minimum_required(VERSION 3.8)

project(AOC2023)
set(CMAKE_CXX_STANDARD 17)

add_executable(day01cpp day01cpp/day1main.cpp)
add_executable(day02cpp day02cpp/main.cpp)
add_executable(day03cpp day03cpp/main.cpp)
add_executable(day04cpp day04cpp/main.cpp)
add_executable(day05cpp day05cpp/main.cpp)
add_executable(day06cpp day06cpp/main.cpp)
add_executable(day07cpp day07cpp/main.cpp)
add_executable(day08cpp day08cpp/main.cpp)
add_executable(day09cpp day09cpp/main.cpp)
add_executable(day10cpp day10cpp/main.cpp)
add_executable(day11cpp day11cpp/main.cpp)
add_executable(day12cpp day12cpp/main.cpp)
add_executable(day13cpp day13cpp/main.cpp)
add_executable(day14cpp day14cpp/main.cpp)
add_executable(day15cpp day15cpp/main.cpp)
add_executable(day16cpp day16cpp/main.cpp)
